# reed-solomn

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: reed_solomon.hpp
src/: ifec.cpp  ifec.h  main.cpp  reed_solomon.cpp  reed_solomon.hpp  rs_config.hpp  rs_core.cpp  rs_core.hpp  rs_error.cpp  rs_error.hpp  rs_galois.cpp  rs_galois.hpp  rs_inversion_tree.cpp  rs_inversion_tree.hpp  rs_matrix.cpp  rs_matrix.hpp  rs_xor.cpp  rs_xor.h
src/example/: CMakeLists.txt  Makefile  demo.cpp
